# TradingPlatform

./: CMakeLists.txt  CircularArray.cpp  CircularArray.h  GenericTrading.cpp  GenericTrading.h  Instrument.cpp  Instrument.h  Order.cpp  Order.h  PriceLevel.cpp  PriceLevel.h  README.txt  SampleCode.cpp  SampleCode.h  StackedOrderBook.cpp  StackedOrderBook.h  StackedOrderLevel.cpp  StackedOrderLevel.h  TradingEngine.cpp  TradingEngine.h  main.cpp
